# debian

./: .gitignore  LICENSE  README.md
languages/c/hash_table/: CMakeLists.txt  Makefile  README.md
languages/c/hash_table/hash/: hash.c  hash.h
languages/c/hash_table/hashtable/: hashtable.c
languages/c/hash_table/linked_list/: d_linked_list.c  d_linked_list.h
languages/c/misc/: argparser.c  enum.c
languages/c/searches/: Makefile  fifo_queue.c  fifo_queue.h  fifo_test.c
languages/c/sorts/: bubble.c  insertion.c  merge.c  quick.c  selection.c  shell.c
languages/java/sorts/src/: Main.java
languages/java/sorts/src/sorts/: BubbleSort.java  InsertionSort.java  SelectionSort.java  Sort.java
languages/python/: example_args.py  sorts.py  user_input.py
languages/python/hackerrank/city_roads/: README.md  city_roads.py  output.txt
languages/python/maze/: README.md  __main__.py  cell.py  maze.py  searches.py
languages/python/sorts/: README.md  sorts.py  test_sorts.py
linux/: config  directories  emacs  files  general
linux/arch/dotfiles/: bash_aliases  bash_profile  bashrc  emacs22  i3_config  i3status_config  inputrc
linux/cheatfiles/: apt-get  config  directories  files  git  grep  makefile
linux/dotfiles/: 70-synaptics.conf  README.md  Xresources  bash_aliases  bashrc  emacs22  fonts.conf  i3_config  i3status_config  inputrc
linux/scripts/: cse  feh_browser  jdk16.bat  kraken  lock  volume_toggle
misc/: laptop  laptop.md  sublime
